<resources>
    <string name="app_name">remindMe</string>
    <string name="pesquisar_notas">Pesquisar Notas</string>
    <string name="Apagar_Nota">Apagar Nota</string>
    <string name="bemvindo">Bem vindo de Volta</string>
    <string name="novouser">Não tem conta? Registe-se</string>
    <string name="registar">Crie a sua \nConta</string>
    <string name="nome">Nome</string>
    <string name="idade">Idade</string>
    <string name="email">Email</string>
    <string name="temconta">Já tem uma conta? Inicia sessão</string>
    <string name="descricao">Descrição ...</string>
    <string name="adicionar">Adicionar</string>
    <string name="verGaleria">Ver Galeria</string>
    <string name="titulo">Titulo</string>
    <string name="subtitulo">Subtitulo</string>
    <string name="corponota">Escreva a sua nota...</string>
    <string name="imagemmisc">Adicionar Imagem</string>
    <string name="ola">"Olá, "</string>
    <string name="welcome">Bem vindo/a</string>
    <string name="perfil">Perfil</string>
    <string name="notas">Notas</string>
    <string name="camera">Camera</string>
    <string name="galeria">Galeria</string>
    <string name="vernotas">Ver Notas</string>
    <string name="definicoes">Definições</string>
    <string name="sair">Sair</string>
    <string name="bigtexto">Com RemindMe não se esqueca do que é mais importante para si.\nRecorde todos os momentos e volte a vive-los novamente!</string>
    <string name="Notasmain">Notas</string>
    <string name="noturno">Modo Noturno</string>
    <string name="notificacoes">Notificações</string>
    <string name="localizacao">Localização</string>
    <string name="seguranca">Privacidade e Segurança</string>
    <string name="linguagem">Linguagem</string>
    <string name="informacoes">Mais sobre</string>
    <string name="logout">Encerrar Sessao</string>
    <string name="editar">Editar Perfil</string>
    <string name="delete">Apagar nota</string>
    <string name="quereliminar">Tem a certeza que pretende eliminar?</string>
    <string name="cancelar">Cancelar</string>
    <string name="Inglês">Inglês</string>
    <string name="Alemão">Alemão</string>
    <string name="Francês">Francês</string>
    <string name="Português">Português</string>
    <string name="Idioma">Idioma</string>
    <string name="BEMVINDO">Bem vindo</string>
    <string name="Chinês">Chinês</string>
    <string name="update">Atualizar</string>
</resources>