<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Camera">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_40sdp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imagemEscolhida"
                android:layout_width="250dp"
                android:layout_height="250dp"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/btnCamera"
                android:layout_width="102dp"
                android:layout_height="74dp"
                app:srcCompat="@drawable/cameradslr" />

        </LinearLayout>

        <EditText
            android:id="@+id/edDesc"
            android:layout_width="@dimen/_275sdp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/descricao"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:layout_marginTop="@dimen/_15sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp">

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/adicionar"
                android:layout_marginRight="@dimen/_20sdp"
                android:backgroundTint="@color/laranja"
                android:background="@drawable/background_fullredondo"/>

            <Button
                android:id="@+id/btnGaleria"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/verGaleria"
                android:backgroundTint="@color/laranja"
                android:background="@drawable/background_fullredondo"
                android:onClick="Galeria"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>